--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>iso</title>
     <script src="js/iso.js"></script>
 </head>
-<body>
+<body style="margin:0; padding:0; overflow: hidden;">
 <canvas id="canvas" width='600' height='600'></canvas>
 </body>
 </html>
